# net-hs

./: Common.hs  Gen.hs  LICENSE.txt  Main.hs  Play.hs  README.md  Solve.hs  default.nix  hsnet.cabal  main.hs  net.hs  stack.yaml
src/: Common.hs  Gen.hs  Main.hs
